--- a/answers/vornamen/vornamen.ipynb
+++ b/answers/vornamen/vornamen.ipynb
@@ -517,7 +517,7 @@
    "source": [
     "from IPython.display import Image\n",
     "from IPython.display import display\n",
-    "display(Image(url='../static/anna.gif'))"
+    "display(Image(url='../../static/anna.gif'))"
    ]
   },
   {
@@ -691,15 +691,6 @@
    "source": [
     "top_namen.plot(subplots=True, figsize=(12,10), grid=False, title='Anzahl Namensträger pro Jahr')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
